testsuite/poke.pkl/trim-diag-5.pk
/* { dg-do compile } */

var t = 111111111111111[1:2]; /* { dg-error "" } */
